<resources>
    <string name="app_name">BLBrowser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="back">back</string>
    <string name="refresh">refresh</string>
    <string name="home">home</string>
    <string name="cancel">Cancel</string>
    <string name="settings">settings</string>
    <string name="exit">Exit</string>
    <string name="light">light</string>
    <string name="blbrowser">BLBrowser</string>
    <string name="datetime">DATETIME</string>
    <string name="battery">bat %</string>
    <string name="googletext">Enter search text here</string>
</resources>
