<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title_text"
            app:layout_constraintLeft_toLeftOf="@id/top_text"
            app:layout_constraintTop_toTopOf="@id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/blbrowser"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/battery_text"
            app:layout_constraintRight_toRightOf="@id/top_text"
            app:layout_constraintTop_toTopOf="@id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/battery"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/clockText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/datetime"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/googleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/mygoogle"
        android:hint="@string/googletext"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/httpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/http"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textVisiblePassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:autofillHints="" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_icon"
            android:text="@string/back"
            android:contentDescription="@string/back" />

        <ImageButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/refresh_icon"
            android:text="@string/refresh"
            android:contentDescription="@string/refresh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/home_icon"
            android:text="@string/home"
            android:contentDescription="@string/home" />

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/cancel_icon"
            android:text="@string/cancel"
            android:contentDescription="@string/cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/settings_icon"
            android:text="@string/settings"
            android:contentDescription="@string/settings" />

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/exit_icon"
            android:text="@string/exit"
            android:contentDescription="@string/exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:src="@drawable/sun"
            android:contentDescription="@string/light" />

        <SeekBar
            android:id="@+id/seekBarLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:progressTint="#d7d7d7"
            android:thumbTint="#d7d7d7" />
    </LinearLayout>

</LinearLayout>
